--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,22 @@
-<p>board works!</p>
+<h1>Current Player: {{ player }} </h1>
+
+<button mat-button (click)="newGame()">Start new Game</button>
+
+<h2 *ngIf="winner">
+  Player {{ winner }} won the game!
+</h2>
+
+
+<mat-grid-list cols="3" rowHeight="200px">
+  <mat-grid-tile
+    *ngFor="let square of squares; let i = index"
+    [colspan]="1"
+    [rowspan]="1"
+  >
+    <app-square
+      [value]="$any(square)"
+      (click)="makeMove(i)"
+    >
+    </app-square>
+  </mat-grid-tile>
+</mat-grid-list>
